Fix overflow bug on artists page

--- a/assets/css/artist_style.css
+++ b/assets/css/artist_style.css
@@ -1,4 +1,8 @@
 
+html {
+    overflow-x: hidden;
+}
+
 .metadata-header {
     position: relative;
     height: 130px;
